--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 
             </div> <!--.barra-->
 
-            <h1>Venta de Casas y Departamentos exclusivos de Lujo</h1>
+            <h1>Venta de Casas y Departamentos exclusivos de Lujos</h1>
         </div>
     </header>
 
@@ -57,8 +57,118 @@
                 voluptatibus aut porro alias consectetur cumque, harum perspiciatis</p>
             </div>
         </div>
-
     </main>
+
+    <section class="seccion contenedor">
+        <h2>Casas y Depas en ventas</h2>
+
+        <div class="contenedor-anuncios">
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio1.webp" type="image/webp">
+                    <source srcset="build/img/anuncio1.jpg" type="image/jpeg">
+                    <img src="build/img/anuncio1.jpg" alt="anuncio" loading="lazy">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa de lujo en el lago</h3>
+                    <p>Casa en el lago con excelentes vistas, acabados de lujo a una excelente precio</p>
+                    <p class="precio">$3.000.000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_dormitorio.svg" alt="icono dormitorio" loading="lazy">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncios.html" class="boton boton-amarillo">
+                        Ver Propiedad
+                    </a>
+                </div> <!--contenido anuncio-->
+            </div> <!--anuncio-->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio2.webp" type="image/webp">
+                    <source srcset="build/img/anuncio2.jpg" type="image/jpeg">
+                    <img src="build/img/anuncio2.jpg" alt="anuncio" loading="lazy">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa terminados de lujo</h3>
+                    <p>Casa en el lago con excelentes vistas, acabados de lujo a una excelente precio</p>
+                    <p class="precio">$3.000.000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_dormitorio.svg" alt="icono dormitorio" loading="lazy">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncios.html" class="boton boton-amarillo">
+                        Ver Propiedad
+                    </a>
+                </div> <!--contenido anuncio-->
+            </div> <!--anuncio-->
+
+            <div class="anuncio">
+                <picture>
+                    <source srcset="build/img/anuncio3.webp" type="image/webp">
+                    <source srcset="build/img/anuncio3.jpg" type="image/jpeg">
+                    <img src="build/img/anuncio3.jpg" alt="anuncio" loading="lazy">
+                </picture>
+
+                <div class="contenido-anuncio">
+                    <h3>Casa con alberca</h3>
+                    <p>Casa en el lago con excelentes vistas, acabados de lujo a una excelente precio</p>
+                    <p class="precio">$3.000.000</p>
+
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="build/img/icono_wc.svg" alt="icono wc" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_estacionamiento.svg" alt="icono estacionamiento" loading="lazy">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="build/img/icono_dormitorio.svg" alt="icono dormitorio" loading="lazy">
+                            <p>4</p>
+                        </li>
+                    </ul>
+
+                    <a href="anuncios.html" class="boton boton-amarillo">
+                        Ver Propiedad
+                    </a>
+                </div> <!--contenido anuncio-->
+            </div> <!--anuncio-->
+
+        </div> <!--contenedor anuncio-->
+
+        <div class="alinear-derecha">
+            <a href="anuncios.html" class="boton-verde">Ver todas</a>
+        </div>
+
+    </section>
 
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
