--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </li>
                     </ul>
 
-                    <a href="anuncios.html" class="boton boton-amarillo">
+                    <a href="anuncios.html" class="boton-amarillo-block">
                         Ver Propiedad
                     </a>
                 </div> <!--contenido anuncio-->
@@ -123,7 +123,7 @@
                         </li>
                     </ul>
 
-                    <a href="anuncios.html" class="boton boton-amarillo">
+                    <a href="anuncios.html" class="boton-amarillo-block">
                         Ver Propiedad
                     </a>
                 </div> <!--contenido anuncio-->
@@ -156,7 +156,7 @@
                         </li>
                     </ul>
 
-                    <a href="anuncios.html" class="boton boton-amarillo">
+                    <a href="anuncios.html" class="boton-amarillo-block">
                         Ver Propiedad
                     </a>
                 </div> <!--contenido anuncio-->
@@ -169,6 +169,75 @@
         </div>
 
     </section>
+
+    <section class="imagen-contacto">
+        <h2>Encuentra la casas de tus sueños</h2>
+        <p>Completa el formulario de contacto y un asesor se pondra en contacto contigo a la brevedad</p>
+        <a href="contacto.html" class="boton-amarillo">Contactanos</a>
+    </section>
+
+    <div class="contenedor seccion seccion-inferior">
+        <section class="blog">
+            <h3>Nuestro Blog</h3>
+
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <picture>
+                        <source srcset="build/img/blog1.webp" type="image/webp">
+                        <source srcset="build/img/blog1.jpg" type="image/jpeg">
+                        <img src="build/img/blog1.jpg" alt="texto entrada blog" loading="lazy">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Terraza en el techo de tu casa</h4>
+                        <p>Escrito el: <span>19/6/24</span> por: <span>Admin</span> </p>
+                        <p>
+                            Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                        </p>
+                    </a>
+
+                </div>
+
+            </article>
+
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <picture>
+                        <source srcset="build/img/blog2.webp" type="image/webp">
+                        <source srcset="build/img/blog2.jpg" type="image/jpeg">
+                        <img src="build/img/blog2.jpg" alt="texto entrada blog" loading="lazy">
+                    </picture>
+                </div>
+
+                <div class="texto-entrada">
+                    <a href="entrada.html">
+                        <h4>Guia para la dercoracion de tu hogar</h4>
+                        <p>Escrito el: <span>19/6/24</span> por: <span>Admin</span> </p>
+                        <p>
+                            Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para dalr vida a tu espacio
+                        </p>
+                    </a>
+
+                </div>
+
+            </article>
+        </section>
+
+        <section class="testimoniales">
+            <h3>Testimoniales</h3>
+            <div class="testimonial">
+                <blockquote>
+                    El personal se comporto de una excelente fomra, muy buena atencion y la casa que me ofrecieron cumple todas mis expetativas.
+                </blockquote>
+                <p>- Matias Rodriguez </p>
+
+            </div>
+
+        </section>
+
+    </div>
 
     <footer class="footer seccion">
         <div class="contenedor contenedor-footer">
