--- a/nosotros.html
+++ b/nosotros.html
@@ -33,7 +33,11 @@
     </header>
 
     <main class="contenedor seccion">
-        <h1>Nosotros</h1>
+        <h1>Conoce sobre nosotros</h1>
+
+        <div class="contenido-nosotros">
+            <img src="" alt="">
+        </div>
 
     </main>
 
